# site-gen-r

./: Cargo.toml  LICENSE  README.md  index-sample.xml  sitemap-sample.xml
src/: TODO  boring.rs  data.rs  main.rs  post.rs  settings.rs
template/: template.html
