[package]
name = "site-gen-rust"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
walkdir = "2"
pulldown-cmark = "0.8"
serde_json = "1.0.96"
scraper = "0.16.0"
chrono = "0.4.26"
